--- a/public/index.html
+++ b/public/index.html
@@ -1,6 +1,10 @@
 <!doctype html>
 <html lang="en">
 <head>
+  <meta name="theme-color" content="#0b0f14">
+<meta name="apple-mobile-web-app-capable" content="yes">
+<meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
 <meta charset="utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1" />
 <meta name="theme-color" content="#0b0f14" />
@@ -77,7 +81,7 @@
   const WATCH_URL = 'https://rileymarker.com/sportlo';
   const OPEN_IN_NEW_TAB = true;
 
-  const fmtTime = d => new Date(d).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit'});
+  const fmtTime = d => new Date(d).toLocaleTimeString([], {hour:'2-digit', minute:'2-digit', hour12:false});
   const slug = s => s.toLowerCase().replace(/[^a-z0-9]+/g,'-').replace(/(^-|-$)/g,'');
   const pills = [].slice.call(document.querySelectorAll('.pill[data-sport]'));
   const gridSections = [].slice.call(document.querySelectorAll('.section'));
@@ -198,6 +202,8 @@
   function card(fx){
     var a = document.createElement('div');
     a.className = 'game-card';
+    a.dataset.startUtc = fx.start_utc || '';
+    a.dataset.status = (fx.status || 'SCHEDULED');
     var s = slug((fx.home.name || '') + '-vs-' + (fx.away.name || ''));
     var watchHref = WATCH_URL + (WATCH_URL.indexOf('?') === -1 ? '?m=' : '&m=') + encodeURIComponent(s);
     a.innerHTML =
@@ -209,7 +215,7 @@
       '</div>' +
       '<div class="gc-main">' +
         '<div class="team left">'+ imgTag(fx.home.logo, fx.home.name) + '<span class="name">'+ (fx.home.name||'') +'</span></div>' +
-        '<div class="score"><span class="num">0</span><span class="sep"> - </span><span class="num">0</span><div class="when">'+ fmtTime(fx.start_utc) +'</div></div>' +
+        '<div class="score"><span class="num">0</span><span class="sep"> - </span><span class="num">0</span><div class="when">'+ fmtTime(fx.start_utc) +'</div><div class="countdown"></div></div>' +
         '<div class="team right"><span class="name">'+ (fx.away.name||'') +'</span>' + imgTag(fx.away.logo, fx.away.name) + '</div>' +
       '</div>' +
       '<div class="gc-foot"><a class="watch-btn" '+(OPEN_IN_NEW_TAB?'target="_blank"':'')+' href="'+watchHref+'"><span class="play"></span>Watch Match</a></div>';
@@ -268,6 +274,62 @@
   }
 
   load((function(){ const d = new Date(); d.setMinutes(d.getMinutes()-d.getTimezoneOffset()); return d.toISOString().slice(0,10); })());
+
+
+// === Kixonair timers: 24h kickoff, countdown, LIVE/Finished pill ===
+(function(){
+  const H=3600*1000, M=60*1000, S=1000;
+  const pad = n => String(n).padStart(2,'0');
+  const fmtCountdown = ms => {
+    if (ms < 0) ms = 0;
+    const h = Math.floor(ms/H), m = Math.floor((ms%H)/M), s = Math.floor((ms%M)/S);
+    return pad(h)+':'+pad(m)+':'+pad(s);
+  };
+  function updateCard(el){
+    const iso = el.dataset.startUtc || '';
+    if(!iso) return;
+    const start = Date.parse(iso);
+    if(!isFinite(start)) return;
+    const now = Date.now();
+    const diff = start - now;
+
+    const dot = el.querySelector('.dot');
+    const state = el.querySelector('.state');
+    const when = el.querySelector('.when');
+    const cd   = el.querySelector('.countdown');
+    if (when) when.textContent = fmtTime(iso);
+
+    // derive status: prefer dataset, otherwise by time
+    let st = String(el.dataset.status||'').toUpperCase();
+    if (!st || st==='SCHEDULED'){
+      if (diff <= 0 && diff > -6*H) st='LIVE';
+      else if (diff <= -6*H) st='FINISHED';
+      else st='SCHEDULED';
+    }
+
+    if (st==='SCHEDULED'){
+      if (cd){ cd.textContent = 'Starts in '+fmtCountdown(diff); cd.style.display='block'; }
+      if (state){ state.textContent = 'SCHEDULED'; state.classList.remove('live','finished'); state.classList.add('scheduled'); }
+      if (dot) dot.classList.remove('live');
+    }else if (st==='LIVE'){
+      if (cd) cd.style.display='none';
+      if (state){ state.textContent = 'LIVE'; state.classList.remove('finished','scheduled'); state.classList.add('live'); }
+      if (dot) dot.classList.add('live');
+    }else{
+      if (cd) cd.style.display='none';
+      if (state){ state.textContent = 'FINISHED'; state.classList.remove('live','scheduled'); state.classList.add('finished'); }
+      if (dot) dot.classList.remove('live');
+    }
+  }
+  function tick(){ document.querySelectorAll('.game-card').forEach(updateCard); }
+
+  // Hook after renders
+  const _rl = window.renderLists;
+  window.renderLists = function(){ _rl(); setTimeout(tick, 30); }
+  setInterval(tick, 1000);
+  tick();
+})();
+
 </script>
 </body>
 </html>
