--- a/public/index.html
+++ b/public/index.html
@@ -87,29 +87,16 @@
 
   function nameOf(fx){ return (fx.league && (fx.league.name || fx.league.code)) || ''; }
   function codeIs(fx, code){ return fx.league && (fx.league.code||'').toUpperCase() === code.toUpperCase(); }
-  
-  function leagueKeyFor(fx){
-    const n = (nameOf(fx)||'').toLowerCase();
-    if (/champions/.test(n)) return 'ucl';
-    if (/conference/.test(n)) return 'uecl';
-    if (/europa(?!.*conference)/.test(n)) return 'uel';
-    if (/premier\s*league/.test(n) && !/scottish|scotland/.test(n)) return 'pl';
-    if (/(la\s*liga|laliga|primera división|primera division)/.test(n)) return 'laliga';
-    if (/bundesliga/.test(n) && !/austria|österreich|austrian/.test(n)) return 'bundes';
-    if (/serie\s*a/.test(n) && /ital/.test(n)) return 'seriea';
-    if (/ligue\s*1|ligue1/.test(n)) return 'ligue1';
-    return 'other';
-  }
-const LEAGUES = [
+  const LEAGUES = [
     { key:'all', label:'All Leagues', test: function(){ return true; } },
-    { key:'ucl', label:'UEFA Champions League', test: fx => leagueKeyFor(fx)==='ucl' },
-    { key:'uel', label:'UEFA Europa League', test: fx => leagueKeyFor(fx)==='uel' },
-    { key:'uecl', label:'UEFA Europa Conference League', test: fx => leagueKeyFor(fx)==='uecl' },
-    { key:'pl',  label:'Premier League (England)', test: fx => leagueKeyFor(fx)==='pl' },
-    { key:'laliga', label:'La Liga (Spain)', test: fx => leagueKeyFor(fx)==='laliga' },
-    { key:'bundes', label:'Bundesliga (Germany)', test: fx => leagueKeyFor(fx)==='bundes' },
-    { key:'seriea', label:'Serie A (Italy)', test: fx => leagueKeyFor(fx)==='seriea' },
-    { key:'ligue1', label:'Ligue 1 (France)', test: fx => leagueKeyFor(fx)==='ligue1' }
+    { key:'ucl', label:'UEFA Champions League', test: fx => codeIs(fx,'CL') || /champions league/i.test(nameOf(fx)) },
+    { key:'uel', label:'UEFA Europa League', test: fx => codeIs(fx,'EL') || /europa league/i.test(nameOf(fx)) },
+    { key:'uecl', label:'UEFA Europa Conference League', test: fx => codeIs(fx,'ECL') || /conference league/i.test(nameOf(fx)) },
+    { key:'pl',  label:'Premier League (England)', test: fx => codeIs(fx,'PL') || /premier league/i.test(nameOf(fx)) },
+    { key:'laliga', label:'La Liga (Spain)', test: fx => codeIs(fx,'PD') || /(la\s*liga|primera division)/i.test(nameOf(fx)) },
+    { key:'bundes', label:'Bundesliga (Germany)', test: fx => codeIs(fx,'BL1') || /bundesliga/i.test(nameOf(fx)) },
+    { key:'seriea', label:'Serie A (Italy)', test: fx => codeIs(fx,'SA') || /serie\s*a/i.test(nameOf(fx)) },
+    { key:'ligue1', label:'Ligue 1 (France)', test: fx => codeIs(fx,'FL1') || /ligue\s*1/i.test(nameOf(fx)) }
   ];
   const leagueWrap = document.getElementById('leagueWrap');
   const leagueMenu = document.getElementById('leagueMenu');
